--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <script src="https://unpkg.com/topojson@3"></script>
     <script src="map_data.js"></script>
 
+    <!-- Vercel Analytics -->
+    <script defer src="/_vercel/insights/script.js"></script>
+
     <style>
         :root {
             --bg-color: #050505;
