--- a/index.html
+++ b/index.html
@@ -369,6 +369,19 @@
             pointer-events: none;
             z-index: 100;
         }
+
+        .copyright {
+            font-family: 'Roboto black' !important;
+            position: fixed;
+            bottom: 6px;
+            right: 7px;
+            font-size: 0.5rem;
+            color: rgba(255, 255, 255, 0.25);
+            z-index: 1000;
+            pointer-events: none;
+            letter-spacing: 1px;
+            font-weight: 300;
+        }
     </style>
 </head>
 
@@ -483,6 +496,8 @@
             </div>
         </footer>
     </div>
+
+    <div class="copyright">&copy; Drayko 2025 / 2026</div>
 
     <script>
         // --- DEBUG / TIME SIMULATION ---
