--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         .sidebar {
             grid-area: sidebar;
             padding: 15px;
-            gap: 15px;
+            gap: 5px;
         }
 
         .sidebar-title {
@@ -165,7 +165,8 @@
             text-transform: uppercase;
             letter-spacing: 2px;
             color: var(--accent-sec);
-            margin-bottom: 10px;
+            margin-top: 20px;
+            margin-bottom: 5px;
             font-weight: 900;
             border-bottom: 1px solid var(--border);
             padding-bottom: 5px;
@@ -403,7 +404,7 @@
 
         <aside class="glass-panel sidebar">
             <div id="map-container"
-                style="width: 100%; height: 140px; position: relative; overflow: hidden; border-bottom: 1px solid var(--border); margin-bottom: 5px; border-radius: 8px;">
+                style="width: 100%; height: 140px; position: relative; overflow: hidden; border-bottom: 1px solid var(--border); border-radius: 8px;">
                 <!-- Map injected via D3 -->
             </div>
             <div class="sidebar-title">Prochaines Étapes</div>
