--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
 
         <aside class="glass-panel sidebar">
             <div id="map-container"
-                style="width: 100%; height: 110px; position: relative; overflow: hidden; border-bottom: 1px solid var(--border); border-radius: 8px;">
+                style="width: 100%; height: 160px; position: relative; overflow: hidden; border-bottom: 1px solid var(--border); border-radius: 8px;">
                 <!-- Map injected via D3 -->
             </div>
             <div class="sidebar-title">Major Hub</div>
@@ -1248,41 +1248,33 @@
             const w = mapContainer.clientWidth;
             const h = mapContainer.clientHeight;
 
-            // Standard scale is 150 for 960x500.
-            // Equirectangular map is roughly 2:1 ratio.
-            // We want to fit it in w, h.
-            // Width-based scale: w / (2 * Math.PI)
-            // Height-based scale: h / Math.PI
-            // We take 95% of the min to leave some margin.
-            const scale = Math.min(w / 6.3, h / 3.2);
-
             mapSvg = d3.select("#map-container").append("svg")
                 .attr("width", w)
-                .attr("height", h);
-            // Background removed to blend with sidebar
-
-            const projection = d3.geoEquirectangular()
-                .scale(scale)
-                .translate([w / 2, h / 2 + (h * 0.05)]); // Slight vertical adjustment
-
-            const path = d3.geoPath().projection(projection);
-
-            mapG = mapSvg.append("g");
-
-            // Glow filter removed for cleaner look
+                .attr("height", h)
+                .attr("viewBox", `0 0 ${w} ${h}`)
+                .attr("preserveAspectRatio", "xMidYMid meet");
 
             d3.json("https://cdn.jsdelivr.net/npm/world-atlas@2/countries-110m.json").then(world => {
+                const countries = topojson.feature(world, world.objects.countries);
+
+                // Switch to Natural Earth projection for a more premium, less "stretched" look
+                // We use fitSize to automatically scale the map to perfectly fit the container dimensions
+                const projection = d3.geoNaturalEarth1()
+                    .fitSize([w, h], countries);
+
+                const path = d3.geoPath().projection(projection);
+                mapG = mapSvg.append("g");
+
                 // Draw landmasses
                 mapG.selectAll("path")
-                    .data(topojson.feature(world, world.objects.countries).features)
+                    .data(countries.features)
                     .enter().append("path")
                     .attr("d", path)
-                    .attr("fill", "rgba(255, 255, 255, 0.05)") // Darker, subtle fill
-                    .attr("stroke", "rgba(255, 255, 255, 0.1)") // Subtle stroke
+                    .attr("fill", "rgba(255, 255, 255, 0.05)")
+                    .attr("stroke", "rgba(255, 255, 255, 0.12)")
                     .attr("stroke-width", 0.5);
 
                 // Initialize dots
-                // Filter timezones that have coords
                 const validTimezones = timezones.filter(tz => timezoneCoords[tz.id]);
 
                 mapDots = mapG.selectAll("circle")
@@ -1296,8 +1288,8 @@
                         const coords = timezoneCoords[d.id];
                         return projection([coords.lon, coords.lat])[1];
                     })
-                    .attr("r", 3) // Larger base size
-                    .attr("fill", "rgba(255,255,255,0.6)"); // Brighter dots
+                    .attr("r", 3.5)
+                    .attr("fill", "rgba(255,255,255,0.5)");
             });
         }
 
