--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
             align-items: center;
             gap: 2px;
             color: var(--accent-sec);
+            font-size: 1.4rem;
+            /* Increased size */
         }
 
         .header-section {
